Subject: update gc_heap.md
Partial: GeekJava-002